<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="24dp">
    <sg.carro.claims.view.CustomFont
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/expense_text_grey1"
        app:textStyle="medium"
        android:textSize="@dimen/sp_12"
        android:text="@string/category"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corner_expense_type_uncheck"
        android:layout_marginTop="@dimen/dp_4">

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/select_category"
            android:textColor="@color/expense_text_grey1"
            android:textColorHint="@color/main_top_uncheck"
            android:textSize="@dimen/sp_14"
            app:ms_hide_arrow="true"
            app:ms_padding_bottom="0dp"
            app:ms_padding_left="@dimen/dp_10"
            app:ms_padding_top="0dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_go_down"
            android:layout_marginEnd="@dimen/dp_16"/>
    </RelativeLayout>
    <sg.carro.claims.view.CustomFont
        android:id="@+id/carplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/expense_text_grey1"
        app:textStyle="medium"
        android:textSize="@dimen/sp_12"
        android:text="@string/carplate"
        android:layout_marginTop="@dimen/dp_12"/>
        <EditText
            android:id="@+id/edit_carplate"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/dp_4"
            android:inputType="text"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textColorHint="@color/main_top_uncheck"
            android:textColor="@color/expense_text_grey1"
            android:textSize="14sp"
            android:hint="@string/enter_carplate"
            android:paddingStart="@dimen/dp_10"
            android:theme="@style/EditTextTheme"
            android:background="@drawable/bg_rounded_corner_expense_type_uncheck"/>
    <sg.carro.claims.view.CustomFont
        android:id="@+id/vendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/expense_text_grey1"
        app:textStyle="medium"
        android:textSize="@dimen/sp_12"
        android:text="@string/Vendor"
        android:layout_marginTop="@dimen/dp_12"/>
    <EditText
        android:id="@+id/edit_vendor"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/dp_4"
        android:inputType="text"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textColorHint="@color/main_top_uncheck"
        android:textColor="@color/expense_text_grey1"
        android:textSize="14sp"
        android:hint="@string/enter_vendor_name"
        android:paddingStart="@dimen/dp_10"
        android:theme="@style/EditTextTheme"
        android:background="@drawable/bg_rounded_corner_expense_type_uncheck"/>
    <sg.carro.claims.view.CustomFont
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/expense_text_grey1"
        app:textStyle="medium"
        android:textSize="@dimen/sp_12"
        android:text="@string/date"
        android:layout_marginTop="@dimen/dp_12"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corner_expense_type_uncheck"
        android:layout_marginTop="@dimen/dp_4">
        <sg.carro.claims.view.CustomFont
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/dp_10"
            android:hint="@string/select_date"
            android:gravity="center_vertical"
            android:textColorHint="@color/main_top_uncheck"
            android:textColor="@color/expense_text_grey1"
            android:textSize="@dimen/sp_14"/>
        <ImageView
            android:id="@+id/iv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_6"
            android:src="@drawable/ic_date"
            android:layout_marginEnd="@dimen/dp_10"/>
    </RelativeLayout>
</LinearLayout>