<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    android:background="@color/white">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <sg.carro.claims.view.CustomFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                app:textStyle="medium"
                android:gravity="center"
                android:textSize="18sp"/>
            <sg.carro.claims.view.CustomFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_login_in"
                android:textColor="@color/login_grey"
                android:layout_marginTop="20dp"
                app:textStyle="medium"
                android:gravity="center"
                android:textSize="14sp"/>
            <EditText
                android:layout_marginTop="80dp"
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="text"
                android:minHeight="45dp"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColorHint="#979797"
                android:textColor="#28323D"
                android:textSize="14sp"
                android:hint="@string/email_address"
                android:theme="@style/EditTextTheme" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/pass_word"
                    android:inputType="textPassword"
                    android:minHeight="45dp"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textColor="#28323D"
                    android:textColorHint="#979797"
                    android:textSize="14sp"
                    android:theme="@style/EditTextTheme" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pass_word"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"/>
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.card.MaterialCardView
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        >
        <sg.carro.claims.view.CustomFont
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/button_rounded_corner_login_uncheck"
            android:gravity="center"
            android:text="@string/login_page_title"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAllCaps="false"
            app:textStyle="demibold"
            />
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>